// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list Validates and generates defaults able to handle or validation 1`] = `
Array [
  Object {
    "kind": "exact",
    "message": "Type must be exact hr",
    "params": "hr",
    "paths": Array [
      "type",
    ],
  },
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [
      "values",
    ],
  },
  Object {
    "kind": "exact",
    "message": "Type must be exact ecg",
    "params": "ecg",
    "paths": Array [
      "type",
    ],
  },
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [
      "values",
    ],
  },
]
`;

exports[`list Validates and generates defaults able to handle or validation 2`] = `
Array [
  Object {
    "kind": "exact",
    "message": "Type must be exact hr",
    "params": "hr",
    "paths": Array [
      "type",
    ],
  },
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [
      "values",
    ],
  },
  Object {
    "kind": "exact",
    "message": "Type must be exact ecg",
    "params": "ecg",
    "paths": Array [
      "type",
    ],
  },
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [
      "values",
    ],
  },
]
`;

exports[`list Validates and generates defaults able to handle or validation 3`] = `
Array [
  Object {
    "kind": "hasExactLength",
    "message": "List has to have size of 1 for HR",
    "params": 1,
    "paths": Array [
      "values",
    ],
  },
  Object {
    "kind": "exact",
    "message": "Type must be exact ecg",
    "params": "ecg",
    "paths": Array [
      "type",
    ],
  },
  Object {
    "kind": "hasExactLength",
    "message": "List has to have size of 3 for ECG",
    "params": 3,
    "paths": Array [
      "values",
    ],
  },
]
`;

exports[`list Validates and generates defaults able to handle or validation 4`] = `
Array [
  Object {
    "message": "List has to have size of 1 for HR",
    "path": "values",
  },
  Object {
    "message": "Type must be exact ecg",
    "path": "type",
  },
]
`;

exports[`list Validates and generates defaults allows to rewrite validation 1`] = `
Array [
  Object {
    "kind": "number",
    "message": "Age should be a number",
    "params": undefined,
    "paths": Array [
      "age",
    ],
  },
  Object {
    "kind": "number",
    "message": "number: no params",
    "params": undefined,
    "paths": Array [
      "weight",
    ],
  },
]
`;

exports[`list Validates and generates defaults validates with static checking 1`] = `
Array [
  Object {
    "kind": "object",
    "message": "object: no params",
    "params": undefined,
    "paths": Array [],
  },
]
`;

exports[`list Validates and generates defaults validates with static checking 2`] = `
Array [
  Object {
    "kind": "number",
    "message": "number: no params",
    "params": undefined,
    "paths": Array [
      "age",
    ],
  },
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [
      "weights",
    ],
  },
]
`;

exports[`list Validates and generates defaults validates with static checking 3`] = `
Array [
  Object {
    "kind": "number",
    "message": "number: no params",
    "params": undefined,
    "paths": Array [
      "weights",
      2,
    ],
  },
]
`;
